--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -11,7 +11,6 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
 ```
 
 # Introduction
@@ -22,6 +21,9 @@ The data is in the file GSScsv.csv and came from the 2018 General Social Survey.
 $H_0$ There is no difference between the average score on the WORDSUM test and level of schooling DEGREE  
 $H_a$ There is a significant difference in average score on the WORDSUM test between at least two levels of DEGREE  
 
+```{r}
+boxplot(WORDSUM~DEGREE,data=davisdata)
+```
 # Methods
 
 <!--Mention that you intend to use chatGPT to the greatest extent possible. Give credit to chatGPT when you use it to create code in your report. Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
@@ -41,7 +43,12 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ## Inferential Results
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=GSScsv)
+summary.aov(model1)
+```
 
+We will reject the null hypothesis because of the low 0.000236
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
